sfdx-source/Modules/ocdla-mail/objects/MessageTemplate__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Message Templates</relationshipLabel>
    <relationshipName>MessageTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>