sfdx-source/Modules/ocdla-mail/objects/MessageTemplate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Attendee Confirmation</fullName>
            </value>
            <value>
                <fullName>Ticket Confirmation</fullName>
            </value>
            <value>
                <fullName>Product Confirmation</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>